# wj-spaceinvaders

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
wj_spaceinvaders/: __init__.py  __main__.py  cli.py  display.py  entities.py  game.py  sprites.py  terminal.py  version.py
