[tool.hatch.build]
# Include _version.py in builds even though it's gitignored (generated at build time)
artifacts = ["wj_spaceinvaders/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["wj_spaceinvaders"]

[project]
name = "wj-spaceinvaders"
dynamic = ["version"]
description = "Classic Space Invaders game for the terminal using ANSI colour and Unicode half-block graphics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
license = "Unlicense"
authors = [
    { name = "WaterJuice" },
]
keywords = ["game", "wj-spaceinvaders", "terminal", "ansi", "console"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Arcade",
]

[project.scripts]
wj-spaceinvaders = "wj_spaceinvaders.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
pattern = "default-unprefixed"

[tool.uv]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "Q", "B", "TC", "UP"]
ignore = ["E501", "B009", "B010", "UP036", "TC001", "TC003"]

[tool.ruff.lint.isort]
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]
force-single-line = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = "error"
pythonVersion = "3.14"

[tool.cal-publish-python]
profile = "waterjuice"

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright[nodejs]",
    "cal-publish-python",
]
